--- a/MvcUI/Views/Message/Send.cshtml
+++ b/MvcUI/Views/Message/Send.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="Description" class="form-label">Description</label>
-                    <input type="text" name="Description" class="form-control" />
+                    <textarea name="Description" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="d-flex justify-content-center mb-3">
                     <button type="submit" class="btn btn-success">Send</button>
