--- a/MvcUI/Views/User/GetUsers.cshtml
+++ b/MvcUI/Views/User/GetUsers.cshtml
@@ -20,6 +20,9 @@
                         @if (user.CarNumberPlate!=null)
                         {
                            <p class="card-text">Car Number Plate =  @user.CarNumberPlate</p> 
+                        }else
+                        {
+                            <p class="card-text">This user does not have a car</p>
                         }
                     </div>
                     <div class="card-footer p-2">
