--- a/MvcUI/Views/Auth/Login.cshtml
+++ b/MvcUI/Views/Auth/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model LoginDTO
+
+@{
     Layout = null;
 }
 
@@ -9,38 +11,53 @@
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/loginform.css" />
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="mb-3 text-center">Login Form</h1>
+    <div class="container">
         <div class="row">
-            <div class="col-md-6 offset-3">
-                <div class="border border-2 border-dark p-3">
-                    <form method="post">
-                        <div class="text-danger" asp-validation-summary="All"></div>
-                        <div class="mb-3">
-                            <label for="IdentificationNumber" class="form-label">T.C. No</label>
-                            <input type="text" name="IdentificationNumber" class="form-control" />
-                        </div>
-                        <div class="mb-3">
-                            <label for="Password" class="form-label">Password</label>
-                            <input type="password" name="Password" class="form-control" />
-                        </div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <button type="submit" class="btn btn-success">Login</button>
-                        </div>
-                    </form>
-                    @if (ViewBag.message != null)
-                    {
-                        <div class="alert alert-danger mt-5">
-                            @ViewBag.message
-                        </div>
-                    }
+            <div class="col-lg-3 col-md-2"></div>
+            <div class="col-lg-6 col-md-8 login-box">
+                <div class="col-lg-12 login-key">
+                    <i class="fa fa-key" aria-hidden="true"></i>
                 </div>
+                <div class="col-lg-12 login-title">
+                    LOGIN FORM
+                </div>
+
+                <div class="col-lg-12 login-form">
+                    <div class="col-lg-12 login-form">
+                        <form method="post">
+                            <div class="form-group">
+                                <label class="form-control-label">T.C. NO</label>
+                                <input type="text" name="IdentificationNumber" class="form-control">
+                                @Html.ValidationMessageFor(x=>x.IdentificationNumber,"",new {@class ="login-text"})
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">PASSWORD</label>
+                                <input type="password" name="Password" class="form-control">
+                                 @Html.ValidationMessageFor(x=>x.Password,"",new {@class ="login-text"})
+                            </div>
+
+                            <div class="col-lg-12 loginbttm">
+                                <div class="col-lg-6 login-btm login-text">
+                                    @if (ViewBag.message != null)
+                                    {
+                                            @ViewBag.message
+                                    }
+                                </div>
+                                <div class="col-lg-6 login-btm login-button">
+                                    <button type="submit" class="btn btn-outline-primary">LOGIN</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-2"></div>
             </div>
         </div>
     </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
