--- a/MvcUI/Views/Shared/Components/UserInvoiceList/Default.cshtml
+++ b/MvcUI/Views/Shared/Components/UserInvoiceList/Default.cshtml
@@ -1,10 +1,5 @@
 ﻿@model List<InvoceListDTO>
 
-@{
-    ViewData["Title"] = "GetMyInvoices";
-    Layout = "~/Views/Shared/_UserLayout.cshtml";
-}
-
 <div class="container">
     <div class="row">
         @foreach (var invoce in Model)
@@ -18,7 +13,7 @@
                         <p class="card-text">Invoice Month = @invoce.Month</p>
                     </div>
                     <div class="card-footer p-2">
-                        <a class="btn btn-warning" href="/Payment/Pay/@invoce.Id">Pay</a>
+                        <button data-id="@invoce.Id" class="btn btn-warning payButton">Pay</button>
                     </div>
                 </div>
             </div>
@@ -26,3 +21,23 @@
     </div>
 </div>
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script>
+$(document).ready(function() {
+ 
+    $(".payButton").click(function() {
+
+        var id = $(this).attr('data-id');
+
+        $.ajax({
+        type:'POST',
+        url : '/Payment/Pay/'+id,
+        dataType: 'json',
+            success: function(data) {
+                alert(data);
+            }
+        });
+
+    });
+});
+</script>
